now running install and then gulp

--- a/src/FAKESimple.Web/package.json
+++ b/src/FAKESimple.Web/package.json
@@ -2,6 +2,9 @@
   "version": "1.0.0",
   "name": "FAKESimple.Web",
   "private": true,
+  "scripts": {
+    "build": "gulp"
+  },
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
